--- a/.gitignore
+++ b/.gitignore
@@ -8,17 +8,28 @@
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
+
 # production
 /build
-/public/CNAME
+
 # misc
 .DS_Store
-.env
+*.pem
+issues.txt
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-*.log
-node_modules
-issues.txt
+# vercel
+.vercel
