--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,7 @@
 {
   "main.js": "render-page.js",
   "main.js.map": "render-page.js.map",
-  "static/default.jpg": "static/default-bc7ceaf7925f5b47adee06511c3120ee.jpg"
+  "static/default.jpg": "static/default-bc7ceaf7925f5b47adee06511c3120ee.jpg",
+  "static/huggingface.svg": "static/huggingface-ba674beba14628f033f29d80bcdaff93.svg",
+  "static/mockito.png": "static/mockito-7fa4f9cff5dea166914f6aebdfd9adda.png"
 }
